--- a/static/styles/panel.css
+++ b/static/styles/panel.css
@@ -57,14 +57,20 @@ html, body {
     font-family: inherit;
     background: transparent;
     border: 2px solid #393D52;
+    background: transparent;
     color: #AFB1BE;
 }
 
-.login input[type=submit]:hover {
-    background: rgba(255, 255, 255, 0.02);
+.login input[type=text]:hover,
+.login input[type=text]:focus,
+.login input[type=password]:hover,
+.login input[type=password]:focus,
+.login input[type=submit]:hover,
+.login input[type=submit]:focus {
+    border: 2px solid rgba(160, 180, 200, 0.1);
+    background: rgba(255, 255, 255, 0.03);
     color: #DDD;
 }
-
 .login input:focus {
     outline: none;
 }
