Pass the content some data

--- a/endpoints/panel/views/layout.ejs
+++ b/endpoints/panel/views/layout.ejs
@@ -20,7 +20,7 @@
                 <span><%= title %></span>
             </div>
             <div class="main">
-                <%- include(content) %>
+                <%- include(content, data) %>
             </div>
         </div>
     </div>
