--- a/endpoints/panel/views/users_new.ejs
+++ b/endpoints/panel/views/users_new.ejs
@@ -1,7 +1,7 @@
 <span class="title">Username</span>
-<input type="text">
+<input type="text" autocomplete="off">
 <br>
 <span class="title">Password</span>
-<input type="password">
+<input type="password" autocomplete="off">
 <br>
 <input type="submit">
