Redirect if not logged in

--- a/endpoints/panel/views/login.ejs
+++ b/endpoints/panel/views/login.ejs
@@ -21,6 +21,8 @@
                     <span>Internal Server Error</span>
                 <% } else if (error === "3") { %>
                     <span>Missing Data</span>
+                <% } else if (error === "4") { %>
+                    <span>You need to login first!</span>
                 <% } else { %>
                     <span>Unknown Error</span>
                 <% } %>
