Add Logout Button

--- a/endpoints/panel/views/layout.ejs
+++ b/endpoints/panel/views/layout.ejs
@@ -18,6 +18,7 @@
         <div class="content">
             <div class="nav">
                 <span><%= title %></span>
+                <span class="logout"><a href="/panel/logout">Logout</a></span>
             </div>
             <div class="main">
                 <%- include(content, data) %>
