--- a/endpoints/panel/views/layout.ejs
+++ b/endpoints/panel/views/layout.ejs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Panel - <%= title %></title>
     <link href="/static/styles/panel.css" rel="stylesheet">
+    <script src="/static/scripts/jquery/3.1.1.js"></script>
 </head>
 <body>
 
