--- a/static/styles/panel.css
+++ b/static/styles/panel.css
@@ -60,7 +60,13 @@ select {
     font-size: 24px;
 }
 
-.login .error {
+.login .brand {
+    margin: 0 0 20px;
+    font-size: 24px;
+}
+
+.login .error,
+.login .info {
     padding: 20px;
     margin-bottom: 20px;
     background: rgba(255, 0, 0, 0.1);
@@ -69,37 +75,55 @@ select {
     text-align: center;
 }
 
+.login .info {
+    background: rgba(100, 100, 180, 0.1);
+    border-color: rgba(100, 100, 180, 0.1);
+}
+
+.login .buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
 .login input[type=text],
 .login input[type=password] {
     display: block;
     -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
     font: inherit;
     width: 100%;
     font-size: 14px;
     padding: 0.75em 1em;
     margin-bottom: 10px;
     border-radius: 0.2em;
-    border: 2px solid #393D52;
+    border: 2px solid rgb(57, 61, 85);
     background: rgba(255, 255, 255, 0.02);
-    color: #AFB1BE;
+    color: rgb(175, 175, 190);
 }
 
+.login .button,
 .login input[type=submit] {
     display: inline-block;
     padding: 0.75em 2em;
-    margin-top: 10px;
-    border-radius: 20px;
-    float: right;
+    margin: 10px 0 0;
+    border-radius: 2em;
     cursor: pointer;
     text-transform: uppercase;
     -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 
     font-size: 14px;
     font-family: inherit;
-    background: transparent;
-    border: 2px solid #393D52;
-    background: transparent;
-    color: #AFB1BE;
+    border: 2px solid rgb(57, 61, 85);
+    background: rgba(255, 255, 255, 0);
+    color: rgb(175, 175, 190);
+}
+
+.login .button {
+    border-color: rgba(255, 255, 255, 0);
+    padding: 0.75em 2em;
 }
 
 .login input[type=text]:hover,
@@ -107,10 +131,12 @@ select {
 .login input[type=password]:hover,
 .login input[type=password]:focus,
 .login input[type=submit]:hover,
-.login input[type=submit]:focus {
-    border: 2px solid rgba(160, 180, 200, 0.1);
+.login input[type=submit]:focus,
+.login .button:hover,
+.login button:focus {
+    border-color: rgb(77, 81, 105);
     background: rgba(255, 255, 255, 0.03);
-    color: #DDD;
+    color: rgb(175, 175, 190);
 }
 
 .container {
@@ -228,6 +254,8 @@ select {
 .container .content .main select {
     display: block;
     -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
     background: #FFF;
     width: 100%;
     max-width: 400px;
@@ -240,12 +268,17 @@ select {
     color: #222;
 }
 
-.container .content .main input[type=text]:hover,
-.container .content .main input[type=text]:focus,
-.container .content .main input[type=password]:hover,
-.container .content .main input[type=password]:focus,
-.container .content .main select:hover,
-.container .content .main select:focus {
+.container .content .main input:disabled {
+    background: #FAFAFA;
+    border-color: #EEE;
+}
+
+.container .content .main input[type=text]:hover:not(:disabled),
+.container .content .main input[type=text]:focus:not(:disabled),
+.container .content .main input[type=password]:hover:not(:disabled),
+.container .content .main input[type=password]:focus:not(:disabled),
+.container .content .main select:hover:not(:disabled),
+.container .content .main select:focus:not(:disabled) {
     border-color: #AAA;
 }
 
@@ -253,7 +286,9 @@ select {
 .container .content .main input[type=submit],
 .container .content .main button {
     -webkit-appearance: none;
-    background: transparent;
+    -moz-appearance: none;
+    appearance: none;
+    background: rgba(255, 255, 255, 0);
     cursor: pointer;
     font: inherit;
     font-size: 16px;
@@ -265,8 +300,11 @@ select {
 }
 
 .container .content .main input[type=button]:hover,
+.container .content .main input[type=button]:focus,
 .container .content .main input[type=submit]:hover,
-.container .content .main button:hover {
+.container .content .main input[type=submit]:focus,
+.container .content .main button:hover,
+.container .content .main button:focus {
     background: #5AC95A;
     color: #FFF;
 }
