--- a/endpoints/panel/views/layout.ejs
+++ b/endpoints/panel/views/layout.ejs
@@ -12,7 +12,7 @@
         <div class="sidebar">
             <ul>
                 <li class="brand">Sherlock</li>
-                <%- include("partials/sidebar", active) %>
+                <%- include("partials/sidebar", data) %>
             </ul>
         </div>
 
