Add Manage Endpoints (future)

--- a/endpoints/panel/views/partials/sidebar.ejs
+++ b/endpoints/panel/views/partials/sidebar.ejs
@@ -17,6 +17,7 @@
 <ul>
     <a href="/panel/logs"><li <% if (active === "logs") { %>class="active"<% } %>>Server Logs</li></a>
     <a href="/panel/system"><li <% if (active === "system") { %>class="active"<% } %>>System Status</li></a>
+    <a href="/panel/endpoints/manage"><li <% if (active === "endpoints_manage") { %>class="active"<% } %>>Manage Endpoints</li></a>
     <a href="/panel/users/manage"><li <% if (active === "users_manage") { %>class="active"<% } %>>Manage Users</li></a>
     <a href="/panel/generator"><li <% if (active === "regkey") { %>class="active"<% } %>>Generate RegKey</li></a>
 </ul>
