Add User Manager Mockup

--- a/endpoints/panel/views/users_manage.ejs
+++ b/endpoints/panel/views/users_manage.ejs
@@ -1,3 +1,56 @@
-<table>
-cool
+<style>
+
+table {
+    border: none;
+    border-collapse: collapse;
+}
+
+table tr td {
+    padding: 1em;
+}
+
+table thead {
+    font-weight: 500;
+    border-bottom: 2px solid #DDD;
+}
+
+table tbody tr:hover {
+    background: #EEE;
+}
+
+table tr td:last-child {
+    text-align: center;
+}
+
+</style>
+
+<table style="width: 100%;">
+    <thead>
+        <tr>
+            <td>Admin</td>
+            <td>Disabled</td>
+            <td>Username</td>
+            <td>Email</td>
+            <td>Token</td>
+            <td>Edit</td>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>true</td>
+            <td>false</td>
+            <td>kurisu</td>
+            <td>kurisubrooks@gmail.com</td>
+            <td>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</td>
+            <td>√</td>
+        </tr>
+        <tr>
+            <td>false</td>
+            <td>false</td>
+            <td>vzwgrey</td>
+            <td>vzwgrey@email.org</td>
+            <td>bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb</td>
+            <td>√</td>
+        </tr>
+    </tbody>
 </table>
