--- a/endpoints/panel/views/users_manage.ejs
+++ b/endpoints/panel/views/users_manage.ejs
@@ -1,30 +1,4 @@
-<style>
-
-table {
-    border: none;
-    border-collapse: collapse;
-}
-
-table tr td {
-    padding: 1em;
-}
-
-table thead {
-    font-weight: 500;
-    border-bottom: 2px solid #DDD;
-}
-
-table tbody tr:hover {
-    background: #EEE;
-}
-
-table tr td:last-child {
-    text-align: center;
-}
-
-</style>
-
-<table style="width: 100%;">
+<table>
     <thead>
         <tr>
             <td>Admin</td>
